5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1602_842.log
== SUBMITION (2019-03-31 15:55:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("Digite um numero com quatro algarismo:"))
soma=0
while(var > 0):
	resto=var%10
	var=var//10
	soma=soma+resto
-- EXECUTION TIME:
0.138887
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:

-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:56:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("Digite um numero com quatro algarismo:"))
soma=0

while(var > 0):
	resto=var%10
	var=var//10
	soma=soma+resto
-- EXECUTION TIME:
0.191559
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:

-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:57:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("Digite um numero com quatro algarismo:"))
soma=0

while(var > 0):
	resto=var%10
	var=var//10
	soma=soma+resto
	print(soma)
-- EXECUTION TIME:
0.156957
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
3
10
11
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
0
1
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:57:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("Digite um numero com quatro algarismo:"))
soma=0

while(var > 0):
	resto=var%10
	var=var//10
	soma=soma+resto
	
	print(soma)
-- EXECUTION TIME:
0.146891
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
3
10
11
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
0
1
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:57:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("Digite um numero com quatro algarismo:"))
soma=0

while(var > 0)
	resto=var%10
	var=var//10
	soma=soma+resto
	
	print(soma)
-- EXECUTION TIME:
0.192977
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 7
    while(var > 0)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:59:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("Digite um numero com quatro algarismo:"))
soma=0

while(var > 0)
	resto=var%10
	var=var//10
	soma=soma+resto
	
	print(soma)
-- EXECUTION TIME:
0.202066
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 7
    while(var > 0)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
